2007-04-14 Eitan Isaacson  <eitan@ascender.com>

	* plugins/api_view.py: Enabled plugin name for translation (bug 429797).
	* plugins/console.py: Enabled plugin name for translation (bug 429797).
	* plugins/event_monitor.py: Enabled plugin name for translation 
	(bug 429797).
	* plugins/interface_view.py: Enabled plugin name for translation 
	(bug 429797).
	* plugins/script_recorder.py: Enabled plugin name for translation 
	(bug 429797).
	* src/accerciser.glade: Got rid of faulty domain in glade
	constructor. Made some strings translatable.
	* src/lib/accerciser/accerciser.py: Made some strings translatable.
	* src/lib/accerciser/hotkey_manager.py: Made some strings
	translatable (bug 429801).
	* src/lib/accerciser/i18n.py.in: Added dummy N_() for later translation.
	* src/lib/accerciser/plugin_manager.py: Made some strings
	translatable. Allowed translation when necessary of plugin names 
	(bug 429797).
	* po/POTFILES.in: Added all plugin files.

2007-04-14 Eitan Isaacson  <eitan@ascender.com>

	* plugins/api_view.py: Made some text translatable.
	* src/lib/accerciser/i18n.py.in: Enable i18n in glade files.

2007-04-13 Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.glade: Changed 'save as' to 'save' so
	mnemonics won't overlap.
	* plugins/interface_view.glade: Added back mnemonics, fixed
	expanders visibility problem.
	* plugins/interface_view.py: Don't overwrite label text, it erases 
	mnemonics.

2007-04-12 Eitan Isaacson  <eitan@ascender.com>

	* debian/changelog: Corrected version.
	* src/lib/accerciser/accerciser.py: Fixed crasher (bug 429184)

2007-04-12 Eitan Isaacson  <eitan@ascender.com>

	* Makefile.am: Added uninstall gconf schema section (bug 429097).

2007-04-12 Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.glade: Changed mnemonics to remove duplicates.
	* plugins/interface_view.glade: Removed expander mnemonics will be
	fixed with bug 429132. Changed mnemonics to remove duplicates.