@@ -1,5 +1,12 @@
 2007-04-14 Eitan Isaacson  <eitan@ascender.com>
 
+	* src/lib/accerciser/accerciser.py: Make bottom and top view names 
+	translatable (bug 429824).
+	* src/lib/accerciser/plugin_manager.py: Make automatically created
+	view name translatable (bug 429824).
+
+2007-04-14 Eitan Isaacson  <eitan@ascender.com>
+
 	* plugins/api_view.py: Enabled plugin name for translation (bug 429797).
 	* plugins/console.py: Enabled plugin name for translation (bug 429797).
 	* plugins/event_monitor.py: Enabled plugin name for translation 
